[ YC-712 ] File attachments attributes