@@ -39,16 +39,16 @@ import static org.junit.Assert.assertNotNull;
  * Date: 17/10/2014
  * Time: 12:13
  */
-public class AbstractImageServiceImplTest {
+public class AbstractFileServiceImplTest {
 
     private final Mockery context = new JUnit4Mockery();
 
-    private AbstractImageServiceImpl service;
+    private AbstractFileServiceImpl service;
 
     @Before
     public void setUp() throws Exception {
 
-        service = new AbstractImageServiceImpl() {
+        service = new AbstractFileServiceImpl() {
             @Override
             protected String getRepositoryUrlPattern(final Object attributableOrStrategy) {
                 return "/pat/";
@@ -56,14 +56,14 @@ public class AbstractImageServiceImplTest {
 
             @Override
             protected String getAttributePrefix(final Object attributableOrStrategy) {
-                return "MY_IMAGE";
+                return "MY_FILE";
             }
         };
 
     }
 
     @Test
-    public void testGetImageAttributeFileNamesNone() throws Exception {
+    public void testGetFileAttributeFileNamesNone() throws Exception {
 
 
 
@@ -75,12 +75,12 @@ public class AbstractImageServiceImplTest {
             one(attributable).getAllAttributes(); will(returnValue(none));
         }});
 
-        final List<Pair<String, String>> pairs = service.getImageAttributeFileNamesInternal(attributable, "en", "MY_IMAGE");
+        final List<Pair<String, String>> pairs = service.getFileAttributeFileNamesInternal(attributable, "en", "MY_FILE");
 
         assertNotNull(pairs);
         assertEquals(1, pairs.size());
-        assertEquals("MY_IMAGE0", pairs.get(0).getFirst());
-        assertEquals(Constants.NO_IMAGE, pairs.get(0).getSecond());
+        assertEquals("MY_FILE0", pairs.get(0).getFirst());
+        assertEquals(Constants.NO_FILE, pairs.get(0).getSecond());
 
         context.assertIsSatisfied();
 
@@ -88,7 +88,7 @@ public class AbstractImageServiceImplTest {
 
 
     @Test
-    public void testGetImageAttributeFileNamesNoImages() throws Exception {
+    public void testGetFileAttributeFileNamesNoFiles() throws Exception {
 
 
 
@@ -106,19 +106,19 @@ public class AbstractImageServiceImplTest {
             one(a1).getCode(); will(returnValue("NON_IMAGE"));
         }});
 
-        final List<Pair<String, String>> pairs = service.getImageAttributeFileNamesInternal(attributable, "en", "MY_IMAGE");
+        final List<Pair<String, String>> pairs = service.getFileAttributeFileNamesInternal(attributable, "en", "MY_FILE");
 
         assertNotNull(pairs);
         assertEquals(1, pairs.size());
-        assertEquals("MY_IMAGE0", pairs.get(0).getFirst());
-        assertEquals(Constants.NO_IMAGE, pairs.get(0).getSecond());
+        assertEquals("MY_FILE0", pairs.get(0).getFirst());
+        assertEquals(Constants.NO_FILE, pairs.get(0).getSecond());
 
         context.assertIsSatisfied();
 
     }
 
     @Test
-    public void testGetImageAttributeFileNamesNoneInLanguage() throws Exception {
+    public void testGetFileAttributeFileNamesNoneInLanguage() throws Exception {
 
 
 
@@ -139,25 +139,25 @@ public class AbstractImageServiceImplTest {
         context.checking(new Expectations() {{
             one(attributable).getAllAttributes(); will(returnValue(avs));
             one(av1).getAttribute(); will(returnValue(a1));
-            one(a1).getCode(); will(returnValue("NON_IMAGE"));
+            one(a1).getCode(); will(returnValue("NON_FILE"));
             one(av2).getAttribute(); will(returnValue(a2));
-            one(a2).getCode(); will(returnValue("MY_IMAGE2"));
-            exactly(2).of(av2).getVal(); will(returnValue("image2.jpg"));
+            one(a2).getCode(); will(returnValue("MY_FILE2"));
+            exactly(2).of(av2).getVal(); will(returnValue("file2.txt"));
             one(av3).getAttribute(); will(returnValue(a3));
-            one(a3).getCode(); will(returnValue("MY_IMAGE1"));
-            exactly(2).of(av3).getVal(); will(returnValue("image1.jpg"));
+            one(a3).getCode(); will(returnValue("MY_FILE1"));
+            exactly(2).of(av3).getVal(); will(returnValue("file1.pdf"));
             one(av4).getAttribute(); will(returnValue(a4));
-            one(a4).getCode(); will(returnValue("NON_IMAGE"));
+            one(a4).getCode(); will(returnValue("NON_FILE"));
 
         }});
 
-        final List<Pair<String, String>> pairs = service.getImageAttributeFileNamesInternal(attributable, "en", "MY_IMAGE");
+        final List<Pair<String, String>> pairs = service.getFileAttributeFileNamesInternal(attributable, "en", "MY_FILE");
         assertNotNull(pairs);
         assertEquals(2, pairs.size());
-        assertEquals("MY_IMAGE1", pairs.get(0).getFirst());
-        assertEquals("image1.jpg", pairs.get(0).getSecond());
-        assertEquals("MY_IMAGE2", pairs.get(1).getFirst());
-        assertEquals("image2.jpg", pairs.get(1).getSecond());
+        assertEquals("MY_FILE1", pairs.get(0).getFirst());
+        assertEquals("file1.pdf", pairs.get(0).getSecond());
+        assertEquals("MY_FILE2", pairs.get(1).getFirst());
+        assertEquals("file2.txt", pairs.get(1).getSecond());
 
         context.assertIsSatisfied();
 
@@ -165,7 +165,7 @@ public class AbstractImageServiceImplTest {
 
 
     @Test
-    public void testGetImageAttributeFileNames() throws Exception {
+    public void testGetFileAttributeFileNames() throws Exception {
 
 
 
@@ -186,27 +186,27 @@ public class AbstractImageServiceImplTest {
         context.checking(new Expectations() {{
             one(attributable).getAllAttributes(); will(returnValue(avs));
             one(av1).getAttribute(); will(returnValue(a1));
-            one(a1).getCode(); will(returnValue("MY_IMAGE1_en"));
-            exactly(2).of(av1).getVal(); will(returnValue("image1_en.jpg"));
+            one(a1).getCode(); will(returnValue("MY_FILE1_en"));
+            exactly(2).of(av1).getVal(); will(returnValue("file1_en.jpg"));
             one(av2).getAttribute(); will(returnValue(a2));
-            one(a2).getCode(); will(returnValue("MY_IMAGE2"));
-            exactly(2).of(av2).getVal(); will(returnValue("image2.jpg"));
+            one(a2).getCode(); will(returnValue("MY_FILE2"));
+            exactly(2).of(av2).getVal(); will(returnValue("file2.jpg"));
             one(av3).getAttribute(); will(returnValue(a3));
-            one(a3).getCode(); will(returnValue("MY_IMAGE1"));
-            one(av3).getVal(); will(returnValue("image1.jpg"));
+            one(a3).getCode(); will(returnValue("MY_FILE1"));
+            one(av3).getVal(); will(returnValue("file1.jpg"));
             one(av4).getAttribute(); will(returnValue(a4));
-            one(a4).getCode(); will(returnValue("MY_IMAGE2_en"));
-            exactly(2).of(av4).getVal(); will(returnValue("image2_en.jpg"));
+            one(a4).getCode(); will(returnValue("MY_FILE2_en"));
+            exactly(2).of(av4).getVal(); will(returnValue("file2_en.jpg"));
 
         }});
 
-        final List<Pair<String, String>> pairs = service.getImageAttributeFileNamesInternal(attributable, "en", "MY_IMAGE");
+        final List<Pair<String, String>> pairs = service.getFileAttributeFileNamesInternal(attributable, "en", "MY_FILE");
         assertNotNull(pairs);
         assertEquals(2, pairs.size());
-        assertEquals("MY_IMAGE1_en", pairs.get(0).getFirst());
-        assertEquals("image1_en.jpg", pairs.get(0).getSecond());
-        assertEquals("MY_IMAGE2_en", pairs.get(1).getFirst());
-        assertEquals("image2_en.jpg", pairs.get(1).getSecond());
+        assertEquals("MY_FILE1_en", pairs.get(0).getFirst());
+        assertEquals("file1_en.jpg", pairs.get(0).getSecond());
+        assertEquals("MY_FILE2_en", pairs.get(1).getFirst());
+        assertEquals("file2_en.jpg", pairs.get(1).getSecond());
 
         context.assertIsSatisfied();
 
@@ -215,7 +215,7 @@ public class AbstractImageServiceImplTest {
 
 
     @Test
-    public void testGetImageAttributeFileNamesWithDefaults() throws Exception {
+    public void testGetFileAttributeFileNamesWithDefaults() throws Exception {
 
 
 
@@ -236,29 +236,29 @@ public class AbstractImageServiceImplTest {
         context.checking(new Expectations() {{
             one(attributable).getAllAttributes(); will(returnValue(avs));
             one(av1).getAttribute(); will(returnValue(a1));
-            one(a1).getCode(); will(returnValue("MY_IMAGE1_en"));
-            exactly(2).of(av1).getVal(); will(returnValue("image1_en.jpg"));
+            one(a1).getCode(); will(returnValue("MY_FILE1_en"));
+            exactly(2).of(av1).getVal(); will(returnValue("file1_en.jpg"));
             one(av2).getAttribute(); will(returnValue(a2));
-            one(a2).getCode(); will(returnValue("MY_IMAGE2"));
-            exactly(2).of(av2).getVal(); will(returnValue("image2.jpg"));
+            one(a2).getCode(); will(returnValue("MY_FILE2"));
+            exactly(2).of(av2).getVal(); will(returnValue("file2.jpg"));
             one(av3).getAttribute(); will(returnValue(a3));
-            one(a3).getCode(); will(returnValue("MY_IMAGE1"));
-            one(av3).getVal(); will(returnValue("image1.jpg"));
+            one(a3).getCode(); will(returnValue("MY_FILE1"));
+            one(av3).getVal(); will(returnValue("file1.jpg"));
             one(av4).getAttribute(); will(returnValue(a4));
-            one(a4).getCode(); will(returnValue("MY_IMAGE3_en"));
-            exactly(2).of(av4).getVal(); will(returnValue("image3_en.jpg"));
+            one(a4).getCode(); will(returnValue("MY_FILE3_en"));
+            exactly(2).of(av4).getVal(); will(returnValue("file3_en.jpg"));
 
         }});
 
-        final List<Pair<String, String>> pairs = service.getImageAttributeFileNamesInternal(attributable, "en", "MY_IMAGE");
+        final List<Pair<String, String>> pairs = service.getFileAttributeFileNamesInternal(attributable, "en", "MY_FILE");
         assertNotNull(pairs);
         assertEquals(3, pairs.size());
-        assertEquals("MY_IMAGE1_en", pairs.get(0).getFirst());
-        assertEquals("image1_en.jpg", pairs.get(0).getSecond());
-        assertEquals("MY_IMAGE2", pairs.get(1).getFirst());
-        assertEquals("image2.jpg", pairs.get(1).getSecond());
-        assertEquals("MY_IMAGE3_en", pairs.get(2).getFirst());
-        assertEquals("image3_en.jpg", pairs.get(2).getSecond());
+        assertEquals("MY_FILE1_en", pairs.get(0).getFirst());
+        assertEquals("file1_en.jpg", pairs.get(0).getSecond());
+        assertEquals("MY_FILE2", pairs.get(1).getFirst());
+        assertEquals("file2.jpg", pairs.get(1).getSecond());
+        assertEquals("MY_FILE3_en", pairs.get(2).getFirst());
+        assertEquals("file3_en.jpg", pairs.get(2).getSecond());
 
         context.assertIsSatisfied();
 
